--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 .container {
-    width: 1320px;
+    max-width: 1320px;
     padding: 0 10px;
     margin: 0 auto;
 }
@@ -77,6 +77,7 @@ body {
 .header-top__list a {
     border-bottom: #27ae60 2px solid;
 }
+
 .header-top__list {
     display: flex;
     color: white;
@@ -106,9 +107,11 @@ body {
     margin-bottom: 7px;
     align-items: center;
 }
+
 .main-inner__img {
     width: 460px;
 }
+
 .main-inner__subtitle {
     color: #828282;
     font-size: 18px;
@@ -201,13 +204,15 @@ body {
     grid-template-columns: repeat(3, 1fr);
     margin: 0 auto 140px;
     justify-items: center;
-    flex-wrap: wrap;
+    width: 100%;
+    gap: 100px;
 }
 
 .what-do-item {
-    width: 350px;
+    width: 100%;
     height: 240px;
     background-color: #212121;
+    
 }
 
 .what-do__img {
@@ -235,22 +240,30 @@ body {
 }
 
 .benefits-statistics__items {
-    background-color: #212121;
-    margin-bottom: 100px;
-    justify-content: space-around;
-    display: flex;
-    text-align: center;
-    max-width: 100%;
-    height: 235px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 0 auto 140px;
+    justify-items: center;
+    width: 100%;
     align-items: center;
-    padding: 0 25px;
+}
+.benefits-statistics__item {
+    width: 100%;
+    height: 200px;
+    text-align: center;
+    align-items: center;
+    background-color: #212121;
 }
 
+
 .benefits-statistics__num {
+    display: inline-block;
     font-weight: 700;
     font-size: 72px;
     line-height: 93px;
     color: #4f4f4f;
+    padding: 50px 0 0;
+    line-height: 70px;
 }
 
 .benefits-statistics__lan {
@@ -258,9 +271,229 @@ body {
     font-size: 24px;
     line-height: 31px;
     color: #27ae60;
+    width: 100%;
 }
 
 .section-social__contacts {
     text-align: center;
     width: 56px;
+}
+.link-img {
+    width: 80%;
+    align-items: center;
+} 
+
+.section-social__item {
+    text-align: center;
+}
+
+@media (max-width: 1350px ) {
+    .container {
+        padding: 0 50px;
+    }
+}
+@media (max-width: 1000px ){
+    .what-do__title {
+        padding-left: 20px;
+    }
+    .logo__link {
+        font-size: 50px;
+    }
+    .header-top__list li{
+        font-size: 25px;
+    }
+    .main-inner__title {
+        font-size: 70px;
+        line-height: 70px;
+        margin-bottom: 15px;
+    }
+    .main-inner__subtitle {
+        width: auto;
+        font-size: 19px;
+    }
+    .main-inner__link-first,
+    .main-inner__link-second {
+        font-size: 25px;
+    }
+    .main-inner__link-second {
+        margin-right: 15px;
+    }
+    .section-about__subscription {
+        font-size: 34px;
+        line-height: 40px;
+        width: 606px;
+        margin: 0 auto 140px;
+    }
+    .section-social__title  {
+        font-size: 34px;
+        font-weight: 700;
+    }
+    .benefits-statistics__lan {
+        font-size: 24px;
+    }
+    .what-do__img {
+        padding-top: 25px;
+        padding-bottom: 30px;
+    }
+    .header-top__list li  {
+        padding-right: 20px;
+    }
+    .social__items {
+        gap: 76px;
+    }
+    .link-img {
+        width: 70%;
+    }
+    .what-do-items {
+        gap: 60px   ;
+    }
+}
+@media (max-width: 650px ){
+    .section-about__subscription{
+        font-size: 45px;
+        line-height: 50px;
+        width: 600px;
+    }
+    .main-inner__subtitle {
+        width: 410px;
+        font-size: 40px;
+    }
+    .main-inner__title {
+        font-size: 90px;
+        line-height: 90px;
+        margin-bottom: 20px;
+    }
+    .social__items {
+        gap: 100px  ;
+    }
+    .what-do-title {
+        font-size: 60px;
+    }
+    .benefits__title {
+        font-size: 60px;
+    }
+    .benefits-statistics__lan {
+        font-size: 45px;
+    }
+    .benefits-statistics__num {
+        font-size: 90px;
+        line-height: 120px;
+    }
+    .what-do-item {
+        height: 300px;
+    }
+    .what-do__title {
+        font-size: 53px;
+    }
+    .header-top__list li {
+        font-size: 35px;
+    }
+    .header-top__list li:last-child {
+        padding-right: 0;
+    }
+    .main-inner__title {
+        line-height: 60px;
+        font-size: 60px;
+    }
+    .main-inner__subtitle {
+        width: 136px;
+        font-size: 28px;
+    }
+}
+@media (max-width: 900px ){
+    .main-inner__text {
+        width: 324px;
+    }
+    .main-inner__img {
+        width: 350px;
+    }
+    .what-do-items {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .benefits-statistics__items {
+        flex-direction: column;
+    }
+    .what-do-item {
+        max-width: 300px;
+    }
+    .benefits-statistics__items {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .benefits-statistics__item {
+        max-width: 300px;
+        margin-bottom: 20px;
+    }
+    .social__items {
+        gap: 20px   ;
+    }
+    .link-img {
+        width: 100%;
+        max-width: 50%;
+    }
+    .section-social__title {
+        font-size: 25px;
+    }
+    .header-top__list {
+        flex-direction: column;
+    }
+    .header-top__list li {
+        padding-right: 0;
+        margin-bottom: 5px;
+    }
+}
+@media (max-width: 650px ){
+    .container {
+        padding: 0 20px;
+    }
+    .header-top {
+        margin-bottom: 200px;
+    }
+    .main-inner__subtitle {
+        text-align: left;
+    }
+    .main {
+        margin-bottom: 160px;
+    }
+    .logo__link {
+        font-size: 28px;
+    }
+    .header-top__list li {
+        font-size: 20px;
+    }
+    .social__items {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+    .social__item {
+        margin-bottom: 20px;
+    }
+    .main-inner__img {
+        display: none;
+    }
+    .main-inner__title {
+        width: 100%;
+    }
+    .main-inner__title {
+        line-height: 74px;
+        font-size: 80px;
+        margin-bottom: 41px;
+    }
+    .main-inner__subtitle {
+        width: 100%;
+        font-size: 32px;
+    }
+    .section-about__subscription {
+        font-size: 25px;
+        width: 100%;
+    }
+    .benefits-statistics__item {
+        height: 250px;
+    }
+    .section-about__subscription {
+        margin:  0 auto 100px;
+    }
 }
